--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 					<i class="fas fa-bars"></i>
 				</button>
 
-				<img class="img-fluid navbarlogo" src="./slikezazivotinje/logo3.png"></img>
+				<img class="img-fluid navbarlogo navbar-brand" src="./slikezazivotinje/logo3.png"></img>
 
 				<button class="btn login navbar-nav ms-auto" data-bs-toggle="popover" title="Login" data-bs-content=''
 					data-bs-placement="left">
