--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
 												<div class="input-group mb-3">
 													<span class="input-group-text" id="basic-addon3">Date:</span>
 													<input class="form-control" id="datepicker"
-														placeholder="click here!" name="date_selected"
+														placeholder="Click here!" name="date_selected"
 														aria-label="Username" aria-describedby="basic-addon3">
 												</div>
 
